# GithubForum

./: .gitattributes  .gitignore  README.md  TODO  _config.yml   categories.html  generate_post.py  index.html  post.html  posting.html  posttemplate.html  recent.html  requirements.txt  styles.css
.github/workflows/: add_to_recent.yml  comment-add.yml  delete-post.yml  generate-post.yml  post-edited.yml
posts/: 10.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  20.html  23.html  5.html
scripts/: add_to_recent.py  generate_post  generate_post.py  includes.py  issue_comment.py  remove_from_recent.py
scripts_py/: generate_post.py
scripts_rust/: Cargo.toml
scripts_rust/src/: add_to_recent.rs  generate_post.rs  issue_comment.rs  remove_from_recent.rs
style/: styles.css
templates/: comment.html  posttemplate.html  section.html
