[package]
name = "scripts_rust"
version = "0.1.0"
edition = "2021"
authors = ["nimafanniasl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["default", "json", "blocking"] }
serde_json = "1.0.113"


[[bin]]
name = "generate_post"
path = "src/generate_post.rs"
