[package]
name = "scripts_rust"
version = "0.1.0"
edition = "2021"
authors = ["nimafanniasl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["default", "json", "blocking"] }
serde_json = "1.0.113"
xml = "0.8.10"

[dependencies.pyo3]
version = "0.20.3"
features = ["auto-initialize"]

[[bin]]
name = "generate_post"
path = "src/generate_post.rs"

[[bin]]
name = "add_to_recent"
path = "src/add_to_recent.rs"
